<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center_horizontal|clip_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title_suc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/success_1"
        android:gravity="center"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:text="@string/ranksuccess"
        android:textColor="@color/darkkhaki"
        android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/totalscore"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_totalscore_suc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center"
            android:text="30"
            android:textColor="@color/blueviolet"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/rankname"
            android:textColor="@color/royalblue"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/tv_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:gravity="center"
            android:textColor="@color/blueviolet"
            android:textSize="20sp"
            android:hint="@string/name_tishi"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_back_suc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableTop="@drawable/pass_fail"
            android:gravity="center"
            android:text="@string/cannel"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/tv_ok_suc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableTop="@drawable/pass_ok"
            android:gravity="center"
            android:text="@string/allow"
            android:textColor="@color/green" />
    </LinearLayout>


</LinearLayout>
